# pkg-librasterlight

./: ChangeLog  Makefile-static-Linux  Makefile-static-MacOsX  Makefile-static-MinGW  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  librasterlite_1.1g.orig.tar.gz.delta  librasterlite_1.1g.orig.tar.gz.id  makefile.vc  nmake.opt  rasterlite.pc.in
debian/: changelog  control  copyright  librasterlite2.symbols  rasterlite-bin.manpages  rules  watch
debian/man/: rasterlite_grid.1.xml  rasterlite_load.1.xml  rasterlite_pyramid.1.xml  rasterlite_tool.1.xml  rasterlite_topmost.1.xml
debian/patches/: 01-fix_build.patch  02-fix_typos.patch  series
headers/: Makefile.am  Makefile.in  rasterlite_internals.h  rasterlite_tiff_hdrs.h
lib/: Makefile.am  Makefile.in  rasterlite.c  rasterlite_aux.c  rasterlite_gif.c  rasterlite_image.c  rasterlite_io.c  rasterlite_jpeg.c  rasterlite_png.c  rasterlite_quantize.c  rasterlite_tiff.c  rasterlite_version.c
src/: Makefile.am  Makefile.in  rasterlite_grid.c  rasterlite_load.c  rasterlite_pyramid.c  rasterlite_tool.c  rasterlite_topmost.c
test/: Makefile.am  Makefile.in  check_badopen.c  check_colours.c  check_metadata.c  check_openclose.c  check_rastergen.c  check_resolution.c  check_version.c
